--- a/package.json
+++ b/package.json
@@ -86,5 +86,8 @@
     "gatsby-plugin-eslint": "^4.0.3",
     "prettier": "^2.8.4",
     "webpack": "^5.76.1"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
